[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mod17"
version = "0.1.1"
authors = [
    {name = "K. Arthur Endsley", email = "arthur.endsley@ntsg.umt.edu"}
]
description = "Python tools for MOD17 algorithm"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    "h5py>=3.7.0",
    "netCDF4>=1.5.7",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "xarray>=0.19.0",
    "suntransit>=0.1.0",
    "tqdm>=4.60.0",
    "fire>=0.4.0"
]

[tool.setuptools.package-data]
"*" = ["data/*.csv"]

[project.optional-dependencies]
docs = ["pdoc3>=0.9.2"]
sensitivity = ["SALib>=1.4.5"]
calibration = ["pymc==4.0.0", "aesara>=2.6.0", "arviz>=0.12.0"]
