[metadata]
name = mod17
version = 0.1.0
author = K. Arthur Endsley
author_email = arthur.endsley@ntsg.umt.edu
description = Python tools for MOD17 algorithm
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
packages = mod17
py_modules = mod17.data, mod17.science, mod17.srs, mod17.utils, mod17.calibration, mod17.sensitivity, mod17.simulation
python_requires = >=3.8.0
install_requires =
    h5py>=3.4.0
    netCDF4>=1.5.7
    numpy>=1.21.0
    scipy>=1.7.0
    xarray>=0.19.0
    suntransit>=0.1.0
    tqdm>=4.60.0
    fire>=0.4.0

[options.package_data]
* = data/*.csv

[options.extras_require]
docs = pdoc3>=0.9.2
sensitivity = SALib>=1.4.5
simulation = pyl4c>=0.1.0; rasterio>=1.2.0; affine>=2.3.0; pyproj>=3.3.0
