[metadata]
name = mod17
version = 0.1.1
author = K. Arthur Endsley
author_email = arthur.endsley@ntsg.umt.edu
description = Python tools for MOD17 algorithm
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
packages = mod17
py_modules = mod17.science, mod17.srs, mod17.utils, mod17.calibration, mod17.sensitivity
python_requires = >=3.8.0
install_requires =
    h5py>=3.7.0
    netCDF4>=1.5.7
    numpy>=1.21.0
    scipy>=1.7.0
    xarray>=0.19.0
    suntransit>=0.1.0
    tqdm>=4.60.0
    fire>=0.4.0
include_package_data = False

[options.package_data]
* = data/*.csv

[options.extras_require]
docs = pdoc3>=0.9.2
sensitivity = SALib>=1.4.5
calibration = pymc>=5.0.0; arviz>=0.13.0; pytensor>=2.18.0
