[metadata]
name = mod17
version = attr: mod17.__version__
author = K. Arthur Endsley
author_email = arthur.endsley@ntsg.umt.edu
description = Python tools for MOD17 algorithm
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
packages = mod17
py_modules = mod17.science, mod17.srs, mod17.utils, mod17.calibration, mod17.sensitivity
python_requires = >=3.8.0
include_package_data = False

[options.package_data]
* = data/*.csv
